Fix: 빌드를 위한 dockerfile 및 yml 작성